fix alignment

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -7,9 +7,12 @@ input {
 
 #wrapper {
 	width: 90%;
-	max-width: 1200px;
+	max-width: 1200px; 
+	min-width:300px;
 	margin: 0 auto;
+	margin-bottom: 60px;
 }
+
 
 a {
 	color: grey;
@@ -34,10 +37,8 @@ a:nth-child(4) {
 }
 
 h1 {
-	position: absolute;
-	position: relative;
 	text-align:center;
-	margin-left: -10px;
+	margin-left: -48px;
 	margin-bottom: 20px;
 	font-style: italic;
 	font-family: Garamond;
@@ -60,7 +61,6 @@ h4 {
 }
 
  a.about {
-  	/*text-shadow:;*/
  	color: black; 
     text-decoration: none;
  	font-family: serif;
@@ -68,13 +68,12 @@ h4 {
  	font-size: 23px;
  	font-weight: bold;
  	margin-top: 0.5em;
-  	vertical-align: center;
+  	vertical-align: middle;
  	opacity: 0.8;
  	float:left;
  	clear: left;
  	margin-left:auto;
     margin-right:auto;
-   /* margin-top: -10px;*/
     display:center;
     margin-bottom: 10px;
  }
